--- a/views/normas.html
+++ b/views/normas.html
@@ -25,7 +25,7 @@
 <div class="t2">Calidad</div>
 <br><br><b>— Pobreza literaria</b>: Obviamente no vamos a pedir una ortografía perfecta ni una narrativa de Cervantes, pero si nos gustaría que no se limitasen a responder simples <i>-te miro-</i>, o pecar con el uso de emojis, así como las caritas.
 <br><br><b>— Usereo</b>: Está bien querer comunicar algo en modo off-rol, lo que no podemos permitir es que se abuse de este. Si vemos a alguien pasandose con el modo user le llamaremos la atención, y si no aprende la lección comenzaremos a darle strikes.
-<br><br><b>— Canal mental</b>: Con canal mental nos referimos a la tendencia de simular un diálogo pero sin llegar a dialogar con nadie en concreto. Abusar de encerrarse en las acciones está prohibido y será motivo de llamada de atención. Los personajes tienen boca por algo. Y  bueno, si tu personaje es mudo, existen otros lenguajes como el lenguaje de signos o el escrito.
+<br><br><b>— Canal mental</b>: Con canal mental nos referimos a la tendencia de simular un diálogo pero sin llegar a establecer una comunicación de verdad. La típica de hablar con acciones. Abusar de encerrarse en las acciones está prohibido y será motivo de llamada de atención. Los personajes tienen boca por algo. Y  bueno, si tu personaje es mudo, existen otros lenguajes como el lenguaje de signos o el escrito.
 <br><br><b>— Godrol/Metarol</b>: A nadie le agrada tener que toparse con estos dos pecados roleros, ni aquí ni en el rol de mesa, por eso tenemos que avisaros de que es motivo de strikes. Por si acaso eres nuevo por aquí, abajo explicaremos qué es cada cosa.
 <br><br>
 <ul>
