--- a/views/map.html
+++ b/views/map.html
@@ -135,7 +135,10 @@
 </body>
 <script defer>
     $(document).ready(function() {
-        alert("Actualmente sólo hay información para la academia magna, pues es el lugar donde se centra todo el fake en principio");
+        setTimeout(()=>{
+            alert("Actualmente sólo hay información para la academia magna, pues es el lugar donde se centra todo el fake en principio");
+        }, 4000)
+        
     });
     
     $('.point').click(() => {
