--- a/views/journal.html
+++ b/views/journal.html
@@ -4,9 +4,9 @@
 Esto será una guía resumida de lo que deberá reflejar tu ficha para ser aceptada.
 <br><br><b>— Nombre y Edad</b>
 <br><b>— Origen</b>: De otro mundo o de alguna región de Nerysium. 
-<br><b>— Rango</b>: Tu rango de maestría dentro de la academia. <br><b style="color: red">De momento sólo está abierto el censo para Neófito, Aprendiz o Veterano. </b>
+<br><b>— Rango</b>: Tu rango de maestría dentro de la academia. Si eres profesor especificar materia que imparte <br><b style="color: red">De momento sólo está abierto el censo para Neófito, Aprendiz, Veterano o Profesor. </b>
 <br><b>— Troncal</b>: Elegir entre asginatura de simpatismo o asignatura de hechicería (explicados en el mapa)
-<br><b>— Materias favoritas</b>: Escoger 4, exceptuando Maref. Son las asignaturas cuyas clases tu personaje no se perdería por nada del mundo.
+<br><b>— Materias favoritas</b>: (Sólo si eres alimno) Escoger 4, exceptuando Maref. Son las asignaturas cuyas clases tu personaje no se perdería por nada del mundo.
 
 <br><b>— Amparo</b>: Elegir un espíritu protector entre<br><br>
 <ul>
