--- a/views/begin.html
+++ b/views/begin.html
@@ -259,9 +259,7 @@ animation: fadeIn ease 20s;
                 },  35.2083 * y + 392.857  );
 
                 trigger_changes();
-            }
-
-            if(st == 2) /*ojos*/ {
+            } else if(st == 2) /*ojos*/ {
                 msgs.push('Escuchas un estrepitoso sonido que hace desaparecer a quienes te acechan');
                 msgs.push('Sientes como si flotaras en agua pero no te notas mojado');
                 msgs.push('En elmomento en que sientes un suelo firme un mundo nuevo se abre ante tus ojos');
@@ -302,9 +300,7 @@ animation: fadeIn ease 20s;
             },  35.2083 * y + 392.857  );
 
                 trigger_changes();
-            }
-
-            if(st == 2) /*ojos*/ {
+            } else if(st == 2) /*ojos*/ {
                 msgs.push('Quienes te acechan se lanzan sobre ti y te aplastan haciendo una mantaña');
                 msgs.push('Sientes como te consumen pero justo entonces notas un estallido que los ahuyenta y te desmayas');
                 msgs.push('Al despertar un mundo nuevo se abre ante ti');
