--- a/views/map.html
+++ b/views/map.html
@@ -269,6 +269,9 @@
         $('.scenerie').attr('src', '/assets/lugares/ul_gurd.png');
         $('.inner_wrapper').html(`
             <h2>Ul'gurd</h2>
+            <p>Las colonias que fueron capaces de soportar las bajas temperauras del norte y se asentaron, creando su propio medio de vida, crearon las primeras aldeas de la region de hielo. 
+            <br><br>
+            Al principio, Ul-gurd no existía como tal, sólo un número de tribus de las nieves con sus diferencias entre ellas, desperdigadas por todo el norte. Sin embargo, con los años se congregaron creando su capital, Ul-gurd. Una nación entre montañas tan blancas como los fantasmas de los cuentos. Sus construcciones escalan la pendiente de sus escarpadas montañas con escaleras vertiginosas para dominar las alturas.</p>
         `);
     });
 
