--- a/views/map.html
+++ b/views/map.html
@@ -134,12 +134,12 @@
     
 </body>
 <script defer>
-    $(document).ready(function() {
+    /*$(document).ready(function() {
         setTimeout(()=>{
             alert("Actualmente sólo hay información para la academia magna, pues es el lugar donde se centra todo el fake en principio");
         }, 2000)
         
-    });
+    });*/
     
     $('.point').click(() => {
         $('#overlay').css({'z-index': '2', 'opacity': '1'});
