--- a/views/map.html
+++ b/views/map.html
@@ -155,6 +155,7 @@
         $('.scenerie').attr('src', '/assets/lugares/mystior.png');
         $('.inner_wrapper').html(`
             <h2>Mystior</h2>
+            <p>En construcción</p>
         `);
     });
 
@@ -162,6 +163,7 @@
         $('.scenerie').attr('src', '/assets/lugares/arcadia.png');
         $('.inner_wrapper').html(`
             <h2>Arcadia</h2>
+            <p>En construcción</p>
         `);
     });
 
@@ -169,6 +171,7 @@
         $('.scenerie').attr('src', '/assets/lugares/estaea.png');
         $('.inner_wrapper').html(`
             <h2>Estaea</h2>
+            <p>En construcción</p>
         `);
     });
     
@@ -279,6 +282,7 @@
         $('.scenerie').attr('src', '/assets/lugares/okpara.png');
         $('.inner_wrapper').html(`
             <h2>Okpara</h2>
+            <p>En construcción</p>
         `);
     });
 
@@ -286,6 +290,7 @@
         $('.scenerie').attr('src', '/assets/lugares/keldar.png');
         $('.inner_wrapper').html(`
             <h2>Keldar</h2>
+            <p>En construcción</p>
         `);
     });
 
@@ -293,6 +298,7 @@
         $('.scenerie').attr('src', '/assets/lugares/zion.png');
         $('.inner_wrapper').html(`
             <h2>Zion</h2>
+            <p>En construcción</p>
         `);
     });
     
@@ -300,6 +306,7 @@
         $('.scenerie').attr('src', '/assets/lugares/scelyndr.png');
         $('.inner_wrapper').html(`
             <h2>Scelyndr</h2>
+            <p>En construcción</p>
         `);
     });
 
