--- a/views/journal.html
+++ b/views/journal.html
@@ -4,7 +4,7 @@
 Esto será una guía resumida de lo que deberá reflejar tu ficha para ser aceptada.
 <br><br><b>— Nombre y Edad</b>
 <br><b>— Origen</b>: De otro mundo o de alguna región de Nerysium. 
-<br><b>— Rango</b>: Tu rango de maestría dentro de la academia. Si eres profesor especificar materia que imparte <br><b style="color: red">De momento sólo está abierto el censo para Neófito, Aprendiz, Veterano o Profesor. </b>
+<br><b>— Rango</b>: Tu rango de maestría dentro de la academia. Si eres profesor especificar materia que imparte <br>
 <br><b>— Troncal</b>: Elegir entre asginatura de simpatismo o asignatura de hechicería (explicados en el mapa)
 <br><b>— Materias favoritas</b>: (Sólo si eres alumno) Escoger 4. Son las asignaturas cuyas clases tu personaje no se perdería por nada del mundo.
 
@@ -30,6 +30,34 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha para ser acept
 
 <br><br>
 <i>Aunque estas dos últimas sean opcionales es recomendable que tengas planteado incluirlas a la larga para conectar tu personaje mejor con la ambientación.</i>
+
+<div class="t2">Censo</div><br>
+Para tener una variedad dentro del fake controlamos que si existen muchos integrantes de un rqutipo no se abuse de este, por ello abrimos o cerramos rangos y clanes dependiendo de como esté el censo del mismo. Siempre decimos que queremos dar libertad, por ello seremos menos exigentes con el tema de los clanes, pero si que iremos cambiando más a menudo el tema de los rangos.a1
+
+<br><br><b>Rangos</b><br><br>
+<b style="color: #188ca7 ">— Neófito (Abierto)<br></b>
+<b style="color: #188ca7">— Aprendiz (Abierto)<br></b>
+<b style="color: #e2af1e">— Veterano (Abierto)<br></b>
+<b style="color: red">— Maestro (Cerrado)<br></b>
+
+<br><br><b>Profesorado</b><br><br>
+<b style="color: #188ca7">— Profesor de Simpatismo (Abierto)<br></b>
+<b style="color: #188ca7">— Profesor de Hechicería (Abierto)<br></b>
+<b style="color: #188ca7">— Profesor de Maref (Abierto)<br></b>
+<b style="color: #188ca7">— Profesor de Nominación (Abierto)<br></b>
+<b style="color: #188ca7">— Profesor de Criaturas mágicas (Abierto)<br></b>
+<b style="color: #188ca7">— Profesor de Herbología (Abierto)<br></b>
+<b style="color: #188ca7">— Profesor de Artificería (Abierto)<br></b>
+<b style="color: #188ca7">— Profesor de Runología (Abierto)<br></b>
+<b style="color:red">— Profesor de Mentalismo (Cerrado)<br></b>
+<b style="color: #188ca7">— Profesor de Historia (Abierto)<br></b>
+<b style="color: #188ca7">— Profesor de Transmutación (Abierto)<br></b>
+
+<br><br><b>Clanes</b><br><br>
+<b style="color: #e2af1e">— Zanark (Abierto)<br></b>
+<b style="color:#188ca7">— Orion (Abierto)<br></b>
+<b style="color:#188ca7">— Cetus (Abierto)<br></b>
+<b style="color: #188ca7">— Eridan (Abierto)<br></b>
 
 <%- include(`./partials/bot-part.html`) %>
 
