--- a/views/map.html
+++ b/views/map.html
@@ -264,6 +264,7 @@
                 <br><br><b>— Runología</b>: Es posible almacenar el intercambio de energía usado con simpatía, o guardar hechizos, en objetos como las runas.
                 <br><br><b>— Mentalismo</b>: Enseña la capacidad de asaltar mentes, crear ilusiones, pero a su vez te ayuda a protegerte de ello mediante la oclumancia. 
                 <br><br><b>— Historia</b>: Repasa los acontecimientos historicos transcurridos en el universo de Narysium.   
+                <br><br><b>— Transmutación</b>: La magia que colleva la transformación física de las cosas. La animagia, el estudio de temas como la licantropía, volver el agua en vino, etc.   
                 </p>
         `);
     });
