--- a/views/map.html
+++ b/views/map.html
@@ -246,7 +246,7 @@
                 <br><br><b>— Vestíbulo</b>: Tras un enorme portón se accede a la diáfana habitación que da paso al resto del castillo.
                 <br><br><b>— Comedor</b>: Conecta con el vestíbulo tras un no muy largo pasillo. Un gran salón está dispuesto de mesas para los alumnos de la academia.
                 <br><br><b>— Cocinas</b>: En ella trabajan duendes, quienes preparan la comida.
-                <br><br><b>— El lago salino</b>: Parece un lago pero en realidad la gran masa de la que está formado proviene del mar, y crecen en el una serie de algas que absorben dicha sal, lo que lo hace parecer un lago dulce con una pizca de sal. 
+                <br><br><b>— El lago salino</b>: Parece un lago pero en realidad la gran masa de agua de la que está formado proviene del mar, y crecen en el una serie de algas que absorben dicha sal, lo que lo hace parecer un lago dulce con una pizca de sal. 
 
                 <br><br><b>— Invernaderos</b>: Donde se encuntran las plantaciones de los miembros dedicados al cuidado de las mismas.
                 <br><br><b>— Residencia de profesores</b>: No muy lejos del castillo se encuentran una serie de casas donde los profesores descansan.
