--- a/public/less/main.less
+++ b/public/less/main.less
@@ -196,6 +196,13 @@ b, strong {
     font-weight: 700!important;
 }
 
+
+.cover_table {
+    width: 100%;
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Biryani:wght@900&family=Gentium+Book+Basic&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
