--- a/views/userlist.html
+++ b/views/userlist.html
@@ -2,45 +2,47 @@
     <h1>Lista de miembros</h1>
     <!--<center><div class="button bactualizar">Actualizar</div></center><br>-->
     <div id="memberlist">
-        
-        <table id="example" class="table table-bordered" cellspacing="0">
-            <thead>
-                <tr>
-                    <th>Cuenta</th>
-                    <th>FC</th>
-                    <th>Rango</th>
-                    <th>Habitac.</th>
-                    <th>Activ.</th>
-                </tr>
-            </thead>
-            <tbody>
-            <% if(members) Object.values(members).map((ix,it) => { %>
-                <tr>
-                    <td><%= ix["name"] %></td>
-                    <% if(fcs[ix["name"]]) { %>
-                        <td><%= fcs[ix["name"]] %></td>
-                    <% } else { %>
-                        <td></td>  
-                    <% } %> 
-
-                    <% if(datos[ix["name"]]) { %>
-                        <td><%= datos[ix["name"]]["rango"] %></td>
-                        <td><%= datos[ix["name"]]["hab"] %></td>
-                    <% } else { %>
-                        <td></td>  
-                        <td></td>
-                    <% } %> 
-                    
-                    <% if(ix["status"] == "activo") { %>
-                        <td style="background-color:#a9d8a9"><%= ix["dhm"] %> días</td>
-                    <% } else { %>
-                        <td style="background-color: #dac09c;"><%= ix["dhm"] %> días</td>
-                    <% } %>     
-                </tr>
-            <% }) %>  
-            </tbody>
-        </table>
-        
+        <div class="cover_table">
+            
+            <table id="example" class="table table-bordered" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>Cuenta</th>
+                        <th>FC</th>
+                        <th>Rango</th>
+                        <th>Habitac.</th>
+                        <th>Activ.</th>
+                    </tr>
+                </thead>
+                <tbody>
+                <% if(members) Object.values(members).map((ix,it) => { %>
+                    <tr>
+                        <td><%= ix["name"] %></td>
+                        <% if(fcs[ix["name"]]) { %>
+                            <td><%= fcs[ix["name"]] %></td>
+                        <% } else { %>
+                            <td></td>  
+                        <% } %> 
+    
+                        <% if(datos[ix["name"]]) { %>
+                            <td><%= datos[ix["name"]]["rango"] %></td>
+                            <td><%= datos[ix["name"]]["hab"] %></td>
+                        <% } else { %>
+                            <td></td>  
+                            <td></td>
+                        <% } %> 
+                        
+                        <% if(ix["status"] == "activo") { %>
+                            <td style="background-color:#a9d8a9"><%= ix["dhm"] %> días</td>
+                        <% } else { %>
+                            <td style="background-color: #dac09c;"><%= ix["dhm"] %> días</td>
+                        <% } %>     
+                    </tr>
+                <% }) %>  
+                </tbody>
+            </table>
+        </div>
+    
 
     </div>
     
