--- a/views/journal.html
+++ b/views/journal.html
@@ -52,9 +52,10 @@ Para tener una variedad dentro del fake controlamos que si existen muchos integr
 <b style="color:red">— Profesor de Mentalismo (Cerrado)<br></b>
 <b style="color: #188ca7">— Profesor de Historia (Abierto)<br></b>
 <b style="color: #188ca7">— Profesor de Transmutación (Abierto)<br></b>
+<b style="color: #188ca7">— Profesor de Alquimia (Abierto)<br></b>
 
 <br><br><b>Clanes</b><br><br>
-<b style="color: #e2af1e">— Zanark (Abierto)<br></b>
+<b style="color: red">— Zanark (Cerrado)<br></b>
 <b style="color:#188ca7">— Orion (Abierto)<br></b>
 <b style="color:#188ca7">— Cetus (Abierto)<br></b>
 <b style="color: #188ca7">— Eridan (Abierto)<br></b>
