--- a/views/journal.html
+++ b/views/journal.html
@@ -36,7 +36,7 @@ Para tener una variedad dentro del fake controlamos que si existen muchos integr
 
 <br><br><b>Rangos</b><br><br>
 <b style="color: #188ca7 ">— Neófito (Abierto)<br></b>
-<b style="color: #188ca7">— Aprendiz (Abierto)<br></b>
+<b style="color: #e2af1e">— Aprendiz (Abierto)<br></b>
 <b style="color: #e2af1e">— Veterano (Abierto)<br></b>
 <b style="color: red">— Maestro (Cerrado)<br></b>
 
