--- a/views/journal.html
+++ b/views/journal.html
@@ -32,7 +32,7 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha para ser acept
 <i>Aunque estas dos últimas sean opcionales es recomendable que tengas planteado incluirlas a la larga para conectar tu personaje mejor con la ambientación.</i>
 
 <div class="t2">Censo</div><br>
-Para tener una variedad dentro del fake controlamos que si existen muchos integrantes de un rqutipo no se abuse de este, por ello abrimos o cerramos rangos y clanes dependiendo de como esté el censo del mismo. Siempre decimos que queremos dar libertad, por ello seremos menos exigentes con el tema de los clanes, pero si que iremos cambiando más a menudo el tema de los rangos.a1
+Para tener una variedad dentro del fake controlamos que si existen muchos integrantes de un rqutipo no se abuse de este, por ello abrimos o cerramos rangos y clanes dependiendo de como esté el censo del mismo. Siempre decimos que queremos dar libertad, por ello seremos menos exigentes con el tema de los clanes, pero si que iremos cambiando más a menudo el tema de los rangos.
 
 <br><br><b>Rangos</b><br><br>
 <b style="color: #188ca7 ">— Neófito (Abierto)<br></b>
