--- a/views/normas.html
+++ b/views/normas.html
@@ -10,7 +10,7 @@
 <br><br>
 <div class="t2">Cuentas</div>
     <br><br><b>— Multicuentas</b>: No hay un límite para las multicuentas, puedes tener dentro del fake tantos OC como quieras mientras sean activos.
-    <br><br><b>— Mutaciones</b>: No se aceptan mutaciones si no ha pasado mínimo 3 semanas desde que se creó. 
+    <br><br><b>— Mutaciones</b>: Se puede mutar la primera vez sin restricción de permanencia. Pero a partir de la segunda, no se aceptan mutaciones si no ha pasado mínimo 3 semanas desde que se hizo la última. 
     <br><br><b>— Semimitaciones/AU</b>: Las semimutaciones o versiones de universo alternativo del PJ no deberán prolongarse más de 1 semana.
 <br><br>
 <div class="t2">Inactividad</div>
