--- a/views/map.html
+++ b/views/map.html
@@ -155,7 +155,13 @@
         $('.scenerie').attr('src', '/assets/lugares/mystior.png');
         $('.inner_wrapper').html(`
             <h2>Mystior</h2>
-            <p>En construcción</p>
+
+            <b>— Política</b>: Monarquía parlamentaria
+            <br><b>— Tecnología</b>: Medio
+            <br><b>— Misticismo</b>: Medio
+
+            <br><br><br><p>Una ciudad construida en torno a una espada colosal incrustada en el suelo. La historia que precede a dicha espada es tan antigua que nadie sabe lo que aconteció y como acabó así, ni siquiera la propia nación de Mystior. Sin embargo hay un cuento arcaico que menciona que dicha espada era un antiguo espiritu guardián de Narysium que cayó desde los cielos un día, creando un cataclismo. 
+            <br><br>La sociedad que se asentó en torno a la espada del espiritu olvidado se basa en una distinción clasista de nobleza y clase media. La segunda tiene la oprtunidad de formar parte del consejo que sirve al rey con unas elecciones que se dan cada dos años.</p>
         `);
     });
 
@@ -163,7 +169,11 @@
         $('.scenerie').attr('src', '/assets/lugares/arcadia.png');
         $('.inner_wrapper').html(`
             <h2>Arcadia</h2>
-            <p>En construcción</p>
+            <br><br><b>— Política</b>: Sinarquía
+            <br><b>— Tecnología</b>: Medio
+            <br><b>— Misticismo</b>: Medio
+
+            <br><br><br><p>En construcción</p>
         `);
     });
 
@@ -171,7 +181,12 @@
         $('.scenerie').attr('src', '/assets/lugares/estaea.png');
         $('.inner_wrapper').html(`
             <h2>Estaea</h2>
-            <p>En construcción</p>
+
+            <br><br><b>— Política</b>: República
+            <br><b>— Tecnología</b>: Medio-Alto
+            <br><b>— Misticismo</b>: Medio-Bajo
+
+            <br><br><br><p>En construcción</p>
         `);
     });
     
@@ -274,9 +289,16 @@
         $('.scenerie').attr('src', '/assets/lugares/ul_gurd.png');
         $('.inner_wrapper').html(`
             <h2>Ul'gurd</h2>
-            <p>Las colonias que fueron capaces de soportar las bajas temperauras del norte crearon su propio medio de vida, levantaron las primeras aldeas de la region de hielo y se asentaron en ellas. 
+
+            <b>— Política</b>: Aristocracia
+            <br><b>— Tecnología</b>: Medio-Bajo
+            <br><b>— Misticismo</b>: Medio
+
+            <br><br><br><p>Las colonias que fueron capaces de soportar las bajas temperauras del norte crearon su propio medio de vida, levantaron las primeras aldeas de la region de hielo y se asentaron en ellas. 
             <br><br>
             Al principio, Ul-gurd no existía como tal, sólo un número de tribus de las nieves con sus diferencias entre ellas, desperdigadas por todo el norte. Sin embargo, con los años se congregaron creando su capital, Ul-gurd. Una nación entre montañas tan blancas como los fantasmas de los cuentos. Sus construcciones escalan la pendiente de sus escarpadas montañas con escaleras vertiginosas para dominar las alturas.</p>
+        
+            
         `);
     });
 
@@ -284,7 +306,13 @@
         $('.scenerie').attr('src', '/assets/lugares/okpara.png');
         $('.inner_wrapper').html(`
             <h2>Okpara</h2>
-            <p>En construcción</p>
+
+            <br><br><b>— Política</b>: Teocracia
+            <br><b>— Tecnología</b>: Medio
+            <br><b>— Misticismo</b>: Alto
+
+            <br><br><br><p>En construcción</p>
+
         `);
     });
 
@@ -292,7 +320,14 @@
         $('.scenerie').attr('src', '/assets/lugares/keldar.png');
         $('.inner_wrapper').html(`
             <h2>Keldar</h2>
-            <p>En construcción</p>
+
+            <b>— Política</b>: Demarquía
+            <br><b>— Tecnología</b>: Bajo
+            <br><b>— Misticismo</b>: Medio
+
+            <br><br><br><p>Muchas son las tribus que conviven en el extenso bosque de Corianand, pero en su núcleo, en lo mas profundo del mismo existe una nación donde todas ellas confluyen, y al lugar al que acuden cuando necesitan algo que no pueden solucionar por su propia mano.
+            <br><br>Los habitantes de este mítico bosque siempre han sido muy autosuficientes, pero del mismo modo, hay algo que protegen en Keldar: El árbol arcaico de Sedris. 
+            <br><br>Dicen escuchar su voz, y es éste quien escoge cada cierto tiempo indefinido a aquellos que gobernarán el reino de Keldar.</p>
         `);
     });
 
@@ -300,7 +335,13 @@
         $('.scenerie').attr('src', '/assets/lugares/zion.png');
         $('.inner_wrapper').html(`
             <h2>Zion</h2>
-            <p>En construcción</p>
+
+            <b>— Política</b>: Tecnocracia
+            <br><b>— Tecnología</b>: Alto
+            <br><b>— Misticismo</b>: Bajo
+
+            <br><br><br><p>Zion es la ciudad de las máquinas por excelencia. Supera al resto de naciones en cuanto a pregreso tecnológico por un largo trecho, y a pesar de la comunicaciones con el resto de la región han sabido mantener el secreto de sus invenciones bastante bien.
+            <br><br>Es liderado por grupo de tecnócratas, cada uno especializado en un ámbito concreto, desempeñar una labor en la política en Zion es como trabajar para una empresa de sociedad anónima, tienes más influencia cuantas más acciones tengas, y los mismos tecnócratas pueden ser despedidos para contratar a otros que sustituyan la vacante.</p>
         `);
     });
     
@@ -308,7 +349,12 @@
         $('.scenerie').attr('src', '/assets/lugares/scelyndr.png');
         $('.inner_wrapper').html(`
             <h2>Scelyndr</h2>
-            <p>En construcción</p>
+
+            <br><br><b>— Política</b>: Monarquía absoluta
+            <br><b>— Tecnología</b>: Bajo
+            <br><b>— Misticismo</b>: Medio
+
+            <br><br><br><p>En construcción</p>
         `);
     });
 
