--- a/views/normas.html
+++ b/views/normas.html
@@ -9,7 +9,7 @@
     <br><br><b>— Creando el PJ</b>: Para una guía de la cración de tu personaje en el menú de navegación pulsa el icono de los dados. Es recomendable que leas un poco del mapa para tener una idea de como está formado el mundo de Narysium.
 <br><br>
 <div class="t2">Cuentas</div>
-    <br><br><b>— Multicuentas</b>: No hay un límite para las multicuentas, puedes tener dentro del fake tantos OC como quieras mientras sean activos.
+    <br><br><b>— Multicuentas</b>: No hay un límite para las multicuentas, puedes tener dentro del fake tantos OC como quieras mientras sean activos. Eso sí, para crear una segunda cuenta se debe esperar mínimo 2 semanas.
     <br><br><b>— Mutaciones</b>: Se puede mutar la primera vez sin restricción de permanencia. Pero a partir de la segunda, no se aceptan mutaciones si no ha pasado mínimo 3 semanas desde que se hizo la última. 
     <br><br><b>— Semimitaciones/AU</b>: Las semimutaciones o versiones de universo alternativo del PJ no deberán prolongarse más de 1 semana.
 <br><br>
