--- a/views/journal.html
+++ b/views/journal.html
@@ -1,7 +1,7 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Creando al personaje</h1>
 <div class="t2">La ficha</div><br>
-Esto será una guía resumida de lo que deberá reflejar tu ficha para ser aceptada.
+Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo para ser aceptada. Sin embargo siempre puedes añadir más información de la indicada, ya sea raza, orientación sexual, etc, eso ya depende de cada quién.
 <br><br><b>— Nombre y Edad</b>
 <br><b>— Origen</b>: De otro mundo o de alguna región de Nerysium. 
 <br><b>— Rango</b>: Tu rango de maestría dentro de la academia. Si eres profesor especificar materia que imparte <br>
