--- a/views/userlist.html
+++ b/views/userlist.html
@@ -53,6 +53,7 @@
     <script defer>
     $(document).ready(() => {
         $('#example').DataTable({ 
+            "lengthMenu": [[100, 150, 200, -1], [100, 150, 200, "All"]],
             "language": { 
                 "sProcessing": "Procesando...", 
                 "sLengthMenu": "Mostrar _MENU_ registros", 
