--- a/views/journal.html
+++ b/views/journal.html
@@ -9,7 +9,7 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo p
 <br><b>— Materias favoritas</b>: (Sólo si eres alumno) Escoger 4. Son las asignaturas cuyas clases tu personaje no se perdería por nada del mundo.
 
 <br><b>— Amparo</b>: (Mándanos por MD <b>2</b> preferencias de tu espíritu protector basándote en la personalidad de tu personaje)<br><br>
-<i>Los admins evaluaremos la personalidad, si has decidido ponerla, y seleccionaremos al personaje en uno de los 4 clanes.</i>
+<i>Los admins evaluaremos la personalidad, si has decidido ponerla, y asignaremos al personaje en uno de los 4 clanes.</i>
 
 <!--<ul>
     <li>El aventurero (Zanark)</li>
@@ -17,7 +17,7 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo p
     <li>El sutil (Cetus)</li>
     <li>El observador (Eridan)</li>
 </ul>-->
-
+<br><br>
 <i>Recuerda que los espíritus están descritos en la ambientación y los clanes en el mapa. Si no lo tienes claro puedes pensar primero la personalidad y luego ver con cual encaja, o incluso dejarnos al staff decidir por ti en base a la personalidad de tu pj</i>
 
 
