--- a/views/journal.html
+++ b/views/journal.html
@@ -47,7 +47,7 @@ Para tener una variedad dentro del fake controlamos que si existen muchos integr
 <b style="color: #188ca7">— Profesor de Hechicería (Abierto)<br></b>
 <b style="color: #188ca7">— Profesor de Maref (Abierto)<br></b>
 <b style="color: #188ca7">— Profesor de Nominación (Abierto)<br></b>
-<b style="color: #188ca7">— Profesor de Criaturas mágicas (Abierto)<br></b>
+<b style="color: red">— Profesor de Criaturas mágicas (Cerrado)<br></b>
 <b style="color: #188ca7">— Profesor de Herbología (Abierto)<br></b>
 <b style="color: #188ca7">— Profesor de Artificería (Abierto)<br></b>
 <b style="color: #188ca7">— Profesor de Runología (Abierto)<br></b>
@@ -57,10 +57,10 @@ Para tener una variedad dentro del fake controlamos que si existen muchos integr
 <b style="color: #188ca7">— Profesor de Alquimia (Abierto)<br></b>
 
 <br><br><b>Clanes</b><br><br>
-<b style="color:#e2af1e">— Zanark (Abierto)<br></b>
+<b style="color: #188ca7">— Zanark (Abierto)<br></b>
 <b style="color:#188ca7">— Orion (Abierto)<br></b>
 <b style="color:#188ca7">— Cetus (Abierto)<br></b>
-<b style="color: #188ca7">— Eridan (Abierto)<br></b>
+<b style="color: #e2af1e">— Eridan (Abierto)<br></b>
 
 <%- include(`./partials/bot-part.html`) %>
 
