--- a/views/map.html
+++ b/views/map.html
@@ -354,13 +354,13 @@
             <br><b>— Tecnología</b>: Bajo
             <br><b>— Misticismo</b>: Medio
 
-            <br><br><br><p>Los mares de Narysium son los que más facilmente conectan con el resto del mundo por tanto la historia que los envuelve arrastra con ellos mitos y leyendas de origen humano.
+            <br><br><br><p>Los mares de Narysium son los que más facilmente conectan con el resto del mundo, por tanto, la historia que los envuelve arrastra con ellos mitos y leyendas de origen humano.
             <br><br>
-            Tritones, sirenas, cecaeloias. Todas y cada unas de estas razas son las que gobiernas los mares y sus rincones, y cada una tiene un monarca supremo que los lidera, a quienes reconocen como "tridentes".
+            Tritones, sirenas, cecaeloias. Todas y cada unas de estas razas son las que gobiernas los mares y sus rincones, y cada una tiene un monarca supremo que los lidera. Este monarca supremo es reconocido como "tridentes".
             <br><br>
-            Es sabido que las cecaelias y los tritones son enemigos y siempre están en guerra. La única nación de los tritones conocida es Scelendyr, un reino que acepta a todas las razas del mar conviviendo dentro de sus muros, y razón por la cual multiples conflictos ocurren entre cecaelias y tritones.
+            Es sabido que las cecaelias y los tritones son enemigos acérrimos, y siempre están en guerra. La única nación de los tritones conocida es Scelendyr, un reino que acepta a todas las razas del mar conviviendo dentro de sus muros, y razón por la cual multiples conflictos ocurren entre cecaelias y tritones.
             <br><br>
-            Existe la costumbre de que el tridente, antes de ostentar el poder debe recibir el casamiento con una siera, así se cumple la tradición de que lo gobierne la pareja de un tritón y una sirena.
+            Existe la costumbre de que el tridente, antes de ostentar el poder debe recibir el casamiento con una sirena, así se cumple la tradición de que tritón y sirena gobiernen juntos.
             </p>
         `);
     });
