--- a/views/map.html
+++ b/views/map.html
@@ -311,10 +311,10 @@
             <br><b>— Tecnología</b>: Medio
             <br><b>— Misticismo</b>: Alto
 
-            <br><br><br><p>Hubo un tiempo en que los espíritus guardianes no estuvieron cuando el pueblo más lo necesitaba: La nacion de Okpara, antes conocida cono Al'pharh, se extendía por el desierto derrochando la magia para transmutar todo a su paso creando paraísos inimaginables.</p>
-            <br><br><br><p>El día en que sucedió el cataclismo que ellos mismos se buscaron, los espíritus totémicos les dieron la espalda. Desde entonces rinden culto a sus propios dioses y han conseguido renacer de sus cenizas.</p>
-            <br><br><br><p>Sus grandes construcciones de piedra imponentes decoran la zona central del desierto.</p>
-            <br><br><br><p>Tras tantos años parece que los espíritus totémicos han vuelto a acoger a sus ciudadanos bajo su amparo, aunque ellos mismos se lo toman con poca iimportancia mas toda la jerarquía de la sociedad se basa en una pirámide donde la voz la tienen sus nuevos dioses que en verdad represenn a entes de otros planos, luego está el faraón y debajo de este una serie de castas.</p>
+            <br><br><br><p>Hubo un tiempo en que los espíritus guardianes no estuvieron cuando el pueblo más lo necesitaba: La nacion de Okpara, antes conocida cono Al'pharh, se extendía por el desierto derrochando la magia para transmutar todo a su paso creando paraísos inimaginables.
+                <br><br>El día en que sucedió el cataclismo que ellos mismos se buscaron, los espíritus totémicos les dieron la espalda. Desde entonces rinden culto a sus propios dioses y han conseguido renacer de sus cenizas.
+                <br><br>Sus grandes construcciones de piedra imponentes decoran la zona central del desierto.
+                <br><br>Tras tantos años parece que los espíritus totémicos han vuelto a acoger a sus ciudadanos bajo su amparo, aunque ellos mismos se lo toman con poca iimportancia mas toda la jerarquía de la sociedad se basa en una pirámide donde la voz la tienen sus nuevos dioses que en verdad represenn a entes de otros planos, luego está el faraón y debajo de este una serie de castas.</p>
         `);
     });
 
