--- a/views/map.html
+++ b/views/map.html
@@ -173,7 +173,9 @@
             <br><b>— Tecnología</b>: Medio
             <br><b>— Misticismo</b>: Medio
 
-            <br><br><br><p>En construcción</p>
+            <br><br><br><p>La nación donde todas las naciones se reunen. Vive del librecambio. Su mercado central y su economía es lo que atrae a ciudadanos desde los cuatro rincones en busca de evolucionar.</p>
+            <p>Justo en frente de la academia magna, conecta a través de un enorme puente. Así como la academia forma una cara de la moneda con la magia y los conocimientos, Arcadia se nutre de la música y el arte y sus calles están repletos de exposiciones, anfiteatros y conservatorios. </p>
+            <p>Como es una ciudad que recibe gran cantidad de extranjeros a lo largo del día, las posadas y tabernas son negocios frecuentes en Arcadia.</p>
         `);
     });
 
@@ -314,7 +316,7 @@
             <br><br><br><p>Hubo un tiempo en que los espíritus guardianes no estuvieron cuando el pueblo más lo necesitaba: La nacion de Okpara, antes conocida cono Al'pharh, se extendía por el desierto derrochando la magia para transmutar todo a su paso creando paraísos inimaginables.
                 <br><br>El día en que sucedió el cataclismo que ellos mismos se buscaron, los espíritus totémicos les dieron la espalda. Desde entonces rinden culto a sus propios dioses y han conseguido renacer de sus cenizas.
                 <br><br>Sus grandes construcciones de piedra imponentes decoran la zona central del desierto.
-                <br><br>Tras tantos años parece que los espíritus totémicos han vuelto a acoger a sus ciudadanos bajo su amparo, aunque ellos mismos se lo toman con poca iimportancia mas toda la jerarquía de la sociedad se basa en una pirámide donde la voz la tienen sus nuevos dioses que en verdad represenn a entes de otros planos, luego está el faraón y debajo de este una serie de castas.</p>
+                <br><br>Tras tantos años parece que los espíritus totémicos han vuelto a acoger a sus ciudadanos bajo su amparo, aunque ellos mismos se lo toman con poca importancia mas toda la jerarquía de la sociedad se basa en una pirámide donde la voz la tienen sus nuevos dioses, los cuales en verdad represenn a entes de otros planos. Debajo está el faraón, y más bajo que este, la pirámide es ocupada por una serie de castas.</p>
         `);
     });
 
