--- a/views/map.html
+++ b/views/map.html
@@ -188,7 +188,8 @@
             <br><b>— Tecnología</b>: Medio-Alto
             <br><b>— Misticismo</b>: Medio-Bajo
 
-            <br><br><br><p>En construcción</p>
+            <br><br><br><p>La nación en calma, la nación que se extiende hasta los aires, o como algunos otros le dicen, la nación donde nunca pasa nada, Estaea, una ciudad de pesacodes de nubes, con residencias normalmente adquiridas por gente adineraa que busca descansar del mundanal ruido. </p>
+            <p>Sus habitantes son tan humildes como aldeanos de un pueblo pintoresco. Sus edicicaciones comienzan desde el suelo, pero se extienden una serie de cables para cabinas que ascienden hasta los cielos done una segunda parte de la ciudad flota con puertos aéreos en la periferia</p>
         `);
     });
     
