--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,7 @@
     <br><br><b>— El observador.</b> Su azul celeste pasa disimulado durante el día, pero durante la noche brilla casi tanto como una estrella. Cuida de aquellos enfocados en lo que es práctico, a los organizados, custodios y protectores, entregados por el ajeno.
     <br>
     <center><a href="/map"><div class="button">Ir al mapa</div></a></center><br>
+    <center><a href="/guides"><div class="button">Guías</div></a></center><br>
 </p>
 
 
