--- a/public/less/main.less
+++ b/public/less/main.less
@@ -47,6 +47,14 @@ a:hover {
 
 }
 
+code {
+    display: block;
+    background: #2b2c3e;
+    padding: 15px;
+    color: #fff;
+    margin: 20px;
+}
+
 @media (max-width: 365px) {
     .header {height: 200px }
     .wrapper {border: 0px solid #040506; margin: 0px;}
