--- a/public/less/main.less
+++ b/public/less/main.less
@@ -51,7 +51,7 @@ code {
     display: block;
     background: #2b2c3e;
     padding: 15px;
-    color: #fff;
+    color: #fff!important;
     margin: 20px;
 }
 
